--- a/index.html
+++ b/index.html
@@ -23,14 +23,63 @@
   </head>
 
   <body>
-    <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
+    <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container-lg px-5">
-
+    <div class="container">
       <!-- time blocks go here  -->
+      <div class="row text-center text-middle">
+        <div class="col-12">
+        <div id="9AM 9" class="row">
+          <div id="9amHour" value="9" class="col-1 border border-purple topPad time-block">9AM</div>
+          <textarea id="9" class="col-9 border border-purple description textarea storage" placeholder="Type Notes Here"></textarea>
+          <button id="9AMSaveBtn" data-hour=9 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+      </div>
+
+      <div id="10AM 10" class="row">
+        <div class="col-1 border border-purple topPad time-block">10AM</div>
+        <textarea id="10" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="10AMSaveBtn" data-hour=10 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+      </div>
+
+      <div id="11AM 11" class="row">
+        <div class="col-1 border border-purple topPad time-block">11AM</div>
+        <textarea id="11" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="11AMSaveBtn" data-hour=11 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+      </div>
+
+      <div id="12PM 12" class="row">
+        <div class="col-1 border border-purple topPad time-block">12PM</div>
+        <textarea id="12" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="12AMSaveBtn" data-hour=12 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button> 
+      </div>
+
+      <div id="1PM 13" class="row">
+        <div class="col-1 border border-purple topPad time-block">1PM</div>
+        <textarea id="13" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="1PMSaveBtn" data-hour=13 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>  
+      </div>
+
+      <div id="2PM 14" class="row">
+        <div class="col-1 border border-purple topPad time-block">2PM</div>
+        <textarea id="11" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="2PMSaveBtn" data-hour=14 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+      </div>
+
+      <div id="3PM 15" class="row">
+        <div class="col-1 border border-purple topPad time-block">3PM</div>
+        <textarea id="11" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="3PMSaveBtn" data-hour=15 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+      </div>
+
+      <div id="4PM 16" class="row">
+        <div class="col-1 border border-purple topPad time-block">4PM</div>
+        <textarea id="11" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="4PMSaveBtn" data-hour=16 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+      </div>
+
 
       <!-- Use class for "past", "present", and "future" to apply styles to the
         time-block divs accordingly. The javascript will need to do this by
@@ -39,38 +88,10 @@
         demonstrating how the css provided can be leveraged to create the
         desired layout and colors. The html below should be removed or updated
         in the finished product. Remember to delete this comment once the
-        code is implemented.
-        -->
-
-      <!-- Example of a past time block. The "past" class adds a gray background color. -->
-      <div id="hour-9" class="row time-block past">
-        <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
-        </button>
-      </div>
-
-      <!-- Example of a a present time block. The "present" class adds a red background color. -->
-      <div id="hour-10" class="row time-block present">
-        <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
-        </button>
-      </div>
-
-      <!-- Example of a future time block. The "future" class adds a green background color. -->
-      <div id="hour-11" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
-        </button>
-      </div>
-
+        code is implemented. -->
+  
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
   </body>
-</html>
+</html> 
