--- a/index.html
+++ b/index.html
@@ -32,52 +32,53 @@
       <!-- time blocks go here  -->
       <div class="row text-center text-middle">
         <div class="col-12">
+
         <div id="9AM 9" class="row">
-          <div id="9amHour" value="9" class="col-1 border border-purple topPad time-block">9AM</div>
-          <textarea id="9" class="col-9 border border-purple description textarea storage" placeholder="Type Notes Here"></textarea>
-          <button id="9AMSaveBtn" data-hour=9 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+          <div class="col-1 border topPad time-block">9AM</div>
+          <textarea id="9" class="col-10 border description textarea" placeholder="Type Notes Here"></textarea>
+          <button id="9AMSaveBtn" data-hour=9 type="button" class="col-1 border saveBtn saveBtn-i">Save Notes</button>
       </div>
 
       <div id="10AM 10" class="row">
-        <div class="col-1 border border-purple topPad time-block">10AM</div>
-        <textarea id="10" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
-        <button id="10AMSaveBtn" data-hour=10 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+        <div class="col-1 border topPad time-block">10AM</div>
+        <textarea id="10" class="col-10 border description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="10AMSaveBtn" data-hour=10 type="button" class="col-1 border saveBtn saveBtn-i">Save Notes</button>
       </div>
 
       <div id="11AM 11" class="row">
-        <div class="col-1 border border-purple topPad time-block">11AM</div>
-        <textarea id="11" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
-        <button id="11AMSaveBtn" data-hour=11 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+        <div class="col-1 border topPad time-block">11AM</div>
+        <textarea id="11" class="col-10 border description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="11AMSaveBtn" data-hour=11 type="button" class="col-1 border saveBtn saveBtn-i">Save Notes</button>
       </div>
 
       <div id="12PM 12" class="row">
-        <div class="col-1 border border-purple topPad time-block">12PM</div>
-        <textarea id="12" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
-        <button id="12AMSaveBtn" data-hour=12 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button> 
+        <div class="col-1 border topPad time-block">12PM</div>
+        <textarea id="12" class="col-10 border description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="12AMSaveBtn" data-hour=12 type="button" class="col-1 border saveBtn saveBtn-i">Save Notes</button> 
       </div>
 
       <div id="1PM 13" class="row">
-        <div class="col-1 border border-purple topPad time-block">1PM</div>
-        <textarea id="13" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
-        <button id="1PMSaveBtn" data-hour=13 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>  
+        <div class="col-1 border topPad time-block">1PM</div>
+        <textarea id="13" class="col-10 border description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="1PMSaveBtn" data-hour=13 type="button" class="col-1 border saveBtn saveBtn-i">Save Notes</button>  
       </div>
 
       <div id="2PM 14" class="row">
-        <div class="col-1 border border-purple topPad time-block">2PM</div>
-        <textarea id="11" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
-        <button id="2PMSaveBtn" data-hour=14 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+        <div class="col-1 border topPad time-block">2PM</div>
+        <textarea id="11" class="col-10 border description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="2PMSaveBtn" data-hour=14 type="button" class="col-1 border saveBtn saveBtn-i">Save Notes</button>
       </div>
 
       <div id="3PM 15" class="row">
-        <div class="col-1 border border-purple topPad time-block">3PM</div>
-        <textarea id="11" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
-        <button id="3PMSaveBtn" data-hour=15 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+        <div class="col-1 border topPad time-block">3PM</div>
+        <textarea id="11" class="col-10 border description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="3PMSaveBtn" data-hour=15 type="button" class="col-1 border saveBtn saveBtn-i">Save Notes</button>
       </div>
 
       <div id="4PM 16" class="row">
-        <div class="col-1 border border-purple topPad time-block">4PM</div>
-        <textarea id="11" class="col-9 border border-purple description textarea" placeholder="Type Notes Here"></textarea>
-        <button id="4PMSaveBtn" data-hour=16 type="button" class="col-1 border border-purple saveBtn saveBtn-i">Save Notes</button>
+        <div class="col-1 border topPad time-block">4PM</div>
+        <textarea id="11" class="col-10 border description textarea" placeholder="Type Notes Here"></textarea>
+        <button id="4PMSaveBtn" data-hour=16 type="button" class="col-1 border saveBtn saveBtn-i">Save Notes</button>
       </div>
 
 
